updated FPM #4; need to update rubric

--- a/course-materials/assignments/FPM4.qmd
+++ b/course-materials/assignments/FPM4.qmd
@@ -7,7 +7,7 @@ subtitle: "Assigned Wed 02/25/2026 | Due Sun 03/08/2026"
 TODO: revise assignment; add final Q about using genAI; update submission instructions to include upload to gradescope
 :::
 
-## Description {description} 
+## Description {#description} 
 
 ### I. Review the final project instructions {#partI}
 
@@ -15,7 +15,7 @@ TODO: revise assignment; add final Q about using genAI; update submission instru
 
 ### II. Review feedback and plan your revisions {#partII}
 
-**Begin by reviewing the feedback you received on FPM #3 from your instructional team and from your in-lab peer reviews.** Make a short plan describing what specific changes you intend to make based on that feedback.
+[**Begin by reviewing the feedback you received on FPM #3 from your instructional team and from your in-lab peer reviews. Make a short plan describing what specific changes you intend to make based on that feedback.**]{.teal-text}
 
 - [ ] **1.** Summarize the key feedback points you received on your FPM #3 draft visualizations.
 - [ ] **2.** Explain which of these suggestions you plan to implement and how.
@@ -23,51 +23,39 @@ TODO: revise assignment; add final Q about using genAI; update submission instru
 
 ### III. Assemble your infographic {#partIII}
 
+[**Assemble your infographic using the tool of your choice**]{.teal-text} (e.g. using `{ggplot2}`, Affinity, Canva, Google Docs/Slides, etc.).
 
+As you refine your work, be sure to incorporate feedback and revisit the ten design elements listed in the [final project description](final-project.qmd#partI){target="_blank"} to guide your design choices.
 
 ### IV. Write your blog post {#partIV}
 
+[**Share your data design process in a short, 1-2 page (~500-1,000 words) science communication blog post-style write up.**]{.teal-text} Your writing should be structured as follows:
 
+- [ ] **1.** Open with an engaging introduction, which states any necesssary background, your motivation, question(s), data / data source(s), and goal(s) of your visualization. 
 
-- free of typos, grammatically correct
+::: {.callout-tip}
+## Storytelling helps to engage your reader
+<!-- Be sure to review the [EDS 296](https://ucsb-meds.github.io/EDS-296-DS-portfolios/course-materials/week4-writing-blogs.html){target="_blank"} materials on [writing data science blog posts](https://ucsb-meds.github.io/EDS-296-DS-portfolios/course-materials/materials/blogging-tips.html#/title-slide){target="_blank"} for tips on crafting a story and engaging your readers! -->
+:::
 
-You will share your data design process and decisions in a short, 1-2 page (~500-1,000 words) science communication blog post-style write up. Your writing should be structured as follows:
+<!-- Be sure to review the [EDS 296](https://ucsb-meds.github.io/EDS-296-DS-portfolios/course-materials/week4-writing-blogs.html){target="_blank"} materials on [writing data science blog posts](https://ucsb-meds.github.io/EDS-296-DS-portfolios/course-materials/materials/blogging-tips.html#/title-slide){target="_blank"} for tips on crafting a story and engaging your readers.  -->
 
-1. Open with an engaging introduction paragraph(s), which states your motivation, question(s), data / data source(s), and goal(s) of your visualization. Be sure to review the [EDS 296](https://ucsb-meds.github.io/EDS-296-DS-portfolios/course-materials/week4-writing-blogs.html){target="_blank"} materials on [writing data science blog posts](https://ucsb-meds.github.io/EDS-296-DS-portfolios/course-materials/materials/blogging-tips.html#/title-slide){target="_blank"} for tips on crafting a story and engaging your readers. 
-<!-- A few examples: -->
-    <!-- - [Relationship between bee behavior and vineyard types in Germany](https://mwidas.github.io/blog-posts/2024-03-05-infographic-bees-wine/){target="_blank"}, by Melissa Widas (MEDS 2024) -->
-    <!-- - [Visualizing Millions of People on the Move](https://www.visualcinnamon.com/portfolio/urbanization/){target="_blank"}, by Nadieh Bremer -->
-    <!-- - [the Kuijpers familytree](https://www.studioterp.nl/my-family-a-visualization/){target="_blank"}, by Sonja Kuijpers -->
-    
-2. Embed / render your final data visualization product(s) (e.g. your full infographic, your three data visualizations, or your approved deliverable) following your introduction. If you are rendering your data viz product from code, be sure that: 
+- [ ] **2.** Embed / render your final infographic following your introduction. If you are rendering your infographic from code, be sure that: 
     - *just* the output renders and *not* the code (e.g. using code chunk options `eval: true` & `echo: false`)
     - warnings and messages are suppressed, as necessary (e.g. using code chunk options `warning: false` & `message: false`); other intermediate products should not be rendered
     - see the Quarto documentation on [HTML Code Blocks](https://quarto.org/docs/output-formats/html-code.html){target="_blank"} and [Execution Options](https://quarto.org/docs/computations/execution-options.html){target="_blank"} for more
 
-3. The body of your blog post should address your approach and decisions for each of the ten design elements listed above (though you are welcome and encouraged to comment on any others that are not explicitly listed). If your visualizations do not include or consider a listed element(s), please comment on why (it's possible that not all ten elements will be applicable to *your* visualizations). You may choose to render and refer to individual / component data visualizations throughout the body of your blog post, as necessary or appropriate.
+- [ ] **3.** The body of your blog post should address your approach and decisions for each of the ten design elements listed in the [final project description](final-project.qmd#partI){target="_blank"} (though you are welcome and encouraged to comment on any others that are not explicitly listed). If your infographic doees not include or consider a listed element(s), please comment on why (it's possible that not all ten elements will be applicable to *your* visualizations). You may choose to render and refer to individual / component data visualizations throughout the body of your blog post, as *necessary or appropriate* -- if you do so, be sure to suppress code from printing.
 
-4. Include the all code used to generate your final data viz products in a foldable code chunk (folded by default; see code chunk option, [`code-fold: true`](https://quarto.org/docs/output-formats/html-code.html#folding-code){target="_blank"}), at the end of your blog post. Be sure to include some written text beforehand that lets your readers know that they can explore the full code by expanding the chunk. Here, your code should: 
+- [ ] **4.** Include the all code used to generate your final data viz products in a foldable code chunk (see code chunk option, [`code-fold: true`](https://quarto.org/docs/output-formats/html-code.html#folding-code){target="_blank"}), at the end of your blog post. Be sure to include some written text beforehand that lets your readers know that they can explore the full code by expanding the chunk. Here, your code should: 
     - print, but not execute (i.e. use code chunk options `eval: false` & `echo: true`)
-    - follow the [tidyverse style guide](https://style.tidyverse.org/){target="_blank"} (important styles are outlined on the [course website](../../clean-code-guide.qmd#general-conventions){target="_blank"})
-    - be appropriately organized and annotated (see [these recommendations](../../clean-code-guide.qmd#annotating-code){target="_blank"})
-    
-<!-- 1. include an engaging introduction paragraph(s), which states your motivation, question(s), data / data source(s), and goal(s) of your visualization. A few great examples: -->
-<!--     - [Relationship between bee behavior and vineyard types in Germany](https://mwidas.github.io/blog-posts/2024-03-05-infographic-bees-wine/){target="_blank"}, by Melissa Widas (MEDS 2024) -->
-<!--     - [Visualizing Millions of People on the Move](https://www.visualcinnamon.com/portfolio/urbanization/){target="_blank"}, by Nadieh Bremer -->
-<!--     - [the Kuijpers familytree](https://www.studioterp.nl/my-family-a-visualization/){target="_blank"}, by Sonja Kuijpers -->
-<!-- 2. address your approach and decisions for each of the ten design elements listed above (though you are welcome and encouraged to comment on any others that are not explicitly listed). If your visualizations do not include or consider a listed element(s), please comment on why (it's possible that not all ten elements will be applicable to *your* visualizations). -->
-
-<!-- ::: {.callout-tip} -->
-<!-- ## Storytelling helps to engage your readers -->
-
-<!-- Be sure to review the [EDS 296](https://ucsb-meds.github.io/EDS-296-DS-portfolios/course-materials/week4-writing-blogs.html){target="_blank"} materials on [writing data science blog posts](https://ucsb-meds.github.io/EDS-296-DS-portfolios/course-materials/materials/blogging-tips.html#/title-slide){target="_blank"} for tips on crafting a story and engaging your readers! -->
-<!-- ::: -->
+    - be appropriately styled (e.g. following [tidyverse style guide](../../clean-code-guide.qmd#general-conventions){target="_blank"}) and annotated
 
 [**You may submit your write-up in one of two ways:**]{.teal-text}
 
-1. As a blog post on your personal website -- check out the [Adding a blog to your existing Quarto website](https://samanthacsik.github.io/posts/2022-10-24-quarto-blogs/) materials for a refresher, if needed
+a. As a blog post on your personal website -- check out the [Adding a blog to your existing Quarto website](https://samanthacsik.github.io/posts/2022-10-24-quarto-blogs/) materials for a refresher, if needed
 
-2. As a published Quarto document that is deployed using GitHub Pages. Expand the note below for detailed instructions on how to do so:
+b. As a published Quarto document that is deployed using GitHub Pages. Expand the note below for detailed instructions on how to do so:
 
 ::: {.callout-note collapse=true}
 ## Instructions for publishing a Quarto doc using GitHub Pages
@@ -102,30 +90,11 @@ knitr::include_graphics("images/deployed.png")
 <!-- Regardless of which of the two publishing options you choose, consider storytelling strategies for effective and engaging data science writing -- review the [Blogging for data science slides](https://ucsb-meds.github.io/EDS-296-DS-portfolios/course-materials/materials/blogging-tips.html#/title-slide){target="_blank"} from the [EDS 296-1F course materials](https://ucsb-meds.github.io/EDS-296-DS-portfolios/){target="_blank"} for guidance. **Remember**, this is an opportunity to grow your portfolio and showcase both your technical and communication skills (through data viz *and* writing).  -->
 <!-- ::: -->
 
-### 3. Present your data viz product to the class {#part3-present}
-
-<!-- [**Finally, you are expected to present your final data visualization product to the class.**]{.teal-text} -->
-
-Final project flash talks will take place **in person during finals week**. You will have **3 minutes** to present your final data visualization(s). You may structure your presentation however you'd like, so long as you address the following: 
-
-- [ ] the question(s) you set out to answer with this project / your visualization(s)
-- [ ] your data source(s) and why those data are appropriate for answering your defined question(s)
-- [ ] your intended audience
-- [ ] two key insights from your visualization(s) -- these should focus on what your audience should take away from the data
-- [ ] two to three design choices (e.g. colors, typography, graphic form, layout) that helped to shape the visualization(s) and improve communication for your intended audience
-- [ ] one to two challenges that you encountered during this project, and how you addressed / iterated on these issues
-- [ ] one to two things that you are especially proud of completing / learning / accomplishing for this project
-
-The presentation format is flexible, but it should be something that can easily be shared with Sam and opened on her computer during the day of presentations.
-
-::: {.callout-important}
-## **IMPORTANT: You are expected to present *in person*** 
-Make up presentations will not be permitted. Please plan accordingly!
-:::
-
 ## Rubric (specifications)
 
-You must complete sections [1](HW4.qmd#part1-choose), [2](HW4.qmd#part2-write), and [3](HW4.qmd#part3-present), as described above to receive a "Satisfactory" mark for Assignment #4. Please carefully review all assignment details before submitting! A few important self-checks:
+To recieve a "Satisfactory" on FPM #4:
+
+- free of typos, grammatically correct
 
 - [ ] I have carefully reviewed my chosen option and completed the project as described
 - [ ] I have considered and implemented (as appropriate) the ten design elements listed in [part 1](HW4.qmd#part1-choose). I acknowledge that it is up to me to decide how to consider, include, omit, and / or modify any of these elements. If I have ignored any of these ten design elements, I have communicated why that decision was made. 
