--- a/course-materials/assignments/FPM5.qmd
+++ b/course-materials/assignments/FPM5.qmd
@@ -2,3 +2,24 @@
 title: "FPM #5: Flash Talk"
 subtitle: "Assigned Wed 03/11/2026 | Due Thu 03/19/2026"
 ---
+
+### 3. Present your data viz product to the class {#part3-present}
+
+<!-- [**Finally, you are expected to present your final data visualization product to the class.**]{.teal-text} -->
+
+Final project flash talks will take place **in person during finals week**. You will have **3 minutes** to present your final data visualization(s). You may structure your presentation however you'd like, so long as you address the following: 
+
+- [ ] the question(s) you set out to answer with this project / your visualization(s)
+- [ ] your data source(s) and why those data are appropriate for answering your defined question(s)
+- [ ] your intended audience
+- [ ] two key insights from your visualization(s) -- these should focus on what your audience should take away from the data
+- [ ] two to three design choices (e.g. colors, typography, graphic form, layout) that helped to shape the visualization(s) and improve communication for your intended audience
+- [ ] one to two challenges that you encountered during this project, and how you addressed / iterated on these issues
+- [ ] one to two things that you are especially proud of completing / learning / accomplishing for this project
+
+The presentation format is flexible, but it should be something that can easily be shared with Sam and opened on her computer during the day of presentations.
+
+::: {.callout-important}
+## **IMPORTANT: You are expected to present *in person*** 
+Make up presentations will not be permitted. Please plan accordingly!
+:::
