continued mods on all assingments

--- a/assignments.qmd
+++ b/assignments.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Assignments"
-subtitle: "find due dates and links to course assingments, below"
+subtitle: "find due dates and links to course assignments, below"
 title-block-banner: true
 ---
 
@@ -23,10 +23,10 @@ You will be building towards your final project deliverables -- a data-driven in
 | SR                      | [Pre-course reflection (SR #1)](course-materials/assignments/SR1.qmd) | Wed 01/07/2026 | Fri 01/09/2026 |
 | HW                      | Homework #1  | Wed 01/07/2026 | Wed 01/14/2026 |
 | FPM                     | [Final Project Milestone #1](course-materials/assignments/FPM1.qmd) | Wed 01/14/2026 | Wed 01/21/2026 | 
-| HW                      | Homework #2 | Wed 01/21/2026 | Wed 01/28/2026 | 
+| HW                      | [Homework #2](course-materials/assignments/HW2.qmd) | Wed 01/21/2026 | Wed 01/28/2026 | 
 | FPM                     | [Final Project Milestone #2](course-materials/assignments/FPM2.qmd) | Wed 01/28/2026 | Wed 02/04/2026 | 
 | SR                      | [Mid-course reflection (SR #2)](course-materials/assignments/SR2.qmd) | Wed 02/04/2026 | Fri 02/06/2026 |
-| HW                      | Homework #3 | Wed 02/04/2026 | Wed 02/11/2026 | 
+| HW                      | [Homework #3](course-materials/assignments/HW3.qmd) | Wed 02/04/2026 | Wed 02/11/2026 | 
 | FPM                     | [Final Project Milestone #3](course-materials/assignments/FPM3.qmd) | Wed 02/11/2026 | Sun 02/22/2026 | 
 | FPM                     | [Final Project Milestone #4](course-materials/assignments/FPM4.qmd) | Wed 02/25/2026 | Sun 03/08/2026 |
 | SR                      | [End-of-course reflection (SR #3)](course-materials/assignments/SR3.qmd) | Wed 03/11/2026 | Fri 03/13/2026 |
