--- a/course-materials/assignments/HW1.qmd
+++ b/course-materials/assignments/HW1.qmd
@@ -16,9 +16,13 @@ TODO: revise assignment -- make focus the responses to questions to verify under
 
 ## Description {#description}
 
-Much of your time as a data scientist will be spent looking at code written by others -- you may imagine scenarios such as trying to learn from and adapt someone else's code for your own work, conducting a code review for a colleague, or validating the code output of a generative AI tool. Being able to look at and make sense of code that you did not write yourself is an invaluable skill and an important one to practice throughout your learning journey. Here, you'll be asked to interpret and annotate `{ggplot2}` code written by someone else. This will likely require running code (both as a whole *and* line-by-line), as well as Googling and / or reading documentation.
+Much of your time as a data scientist will be spent looking at code written by others -- you may imagine scenarios such as trying to learn from and adapt someone else's code for your own work, conducting a code review for a colleague, or validating the code output of a generative AI tool. Being able to look at and make sense of code that you did not write yourself is an invaluable skill and an important one to practice throughout your learning journey. [**Here, you'll be asked to interpret and annotate `{ggplot2}` code written by someone else. This will likely require running code (both as a whole *and* line-by-line), as well as Googling and / or reading documentation.**]{.teal-text}
 
 *I recognize that there is (likely) **a lot** of new code presented here that we haven't yet covered in this course (we'll get there eventually though!). This is intentionally an exercise is resourcefulness! By the end of this exercise, you should feel a bit more confident in your ability to interpret (and maybe even reuse!) code written by others.*
+
+### I. Create a repository using the `eds240-hw1` template
+
+[**Follow [these instructions](https://docs.github.com/en/repositories/creating-and-managing-repositories/creating-a-repository-from-a-template#creating-a-repository-from-a-template){target="_blank"} to create a repository from the [`eds240-SR1` template](https://github.com/EDS-240-Data-Viz/eds240-sr1){target="_blank"}.**]{.teal-text} The template repository includes `SR1.qmd`, where you'll be responding to the self reflection prompts in the following section(s).
 
 ### a. Annotate code {#part-a}
 
