--- a/course-materials/assignments/SR1.qmd
+++ b/course-materials/assignments/SR1.qmd
@@ -8,7 +8,7 @@ description: "Adapted from [An Bui's](https://an-bui.com/) reflection exercises 
 
 [**In this self reflection, you'll come up with a plan for what you'd like to get out of the class and roughly outline how you'll accomplish your goals throughout the quarter.**]{.teal-text} You'll continue revisiting the goals you set for yourself in this assignment throughout the quarter, so its worthwhile to be reflective!
 
-### I. Create a repository using the `eds240-SR1` template
+### I. Create a repository using the `eds240-sr1` template
 
 [**Follow [these instructions](https://docs.github.com/en/repositories/creating-and-managing-repositories/creating-a-repository-from-a-template#creating-a-repository-from-a-template){target="_blank"} to create a repository from the [`eds240-SR1` template](https://github.com/EDS-240-Data-Viz/eds240-sr1){target="_blank"}.**]{.teal-text} The template repository includes `SR1.qmd`, where you'll be responding to the self reflection prompts in the following section(s).
 
