--- a/course-materials/assignments/SR2.qmd
+++ b/course-materials/assignments/SR2.qmd
@@ -8,7 +8,7 @@ description: "Adapted from [An Bui's](https://an-bui.com/) reflection exercises 
 
 [**For this self reflection, revisit your initial learning goals and plans (from SR #1), then consider your progress towards those goals in your responses to the following questions:**]{.teal-text} 
 
-## I. Create a repository using the `eds240-SR2` template
+## I. Create a repository using the `eds240-sr2` template
 
 [**Follow [these instructions](https://docs.github.com/en/repositories/creating-and-managing-repositories/creating-a-repository-from-a-template#creating-a-repository-from-a-template){target="_blank"} to create a repository from the [`eds240-SR2` template](https://github.com/EDS-240-Data-Viz/eds240-sr2){target="_blank"}.**]{.teal-text} The template repository includes `SR2.qmd`, where you'll be responding to the self reflection prompts in the following section(s).
 
