--- a/course-materials/assignments/FPM2.qmd
+++ b/course-materials/assignments/FPM2.qmd
@@ -53,9 +53,9 @@ To receive a "Satisfactory" mark for FPM #2:
 - [ ] **Complete all Part IV steps,** as described above. This includes building at least three distinct exploratory data visualizations. 
 - [ ] **Code in Part IV should follow appropriate styling conventions and include clear, informative annotations.** We will not enforce any particular code style guide (you may use conventions from prior courses if you prefer; we recommend following [these conventions](../../clean-code-guide.qmd){target="_blank"} from the [Tidyverse style guide](https://style.tidyverse.org/index.html){target="_blank"} if you're unsure where to start). You don’t need to explain every line, but your annotations should make it easy to follow your thinking and understand important decisions in your code.
 - [ ] **Answer all three Part V questions.** There are no strict length requirements for free-response questions, however we expect that you answer them thoughtfully and fully.
-- [ ] **Ensure that everything described above is included in your neatly-organized and polished `exploration.qmd`** -- this includes appropriate document YAML (at a minimum, title, author, date), clearly labeled sections, appropriately-formatted prose, appropriate code chunk options (e.g. code should render and execute, but warnings and messages should be suppressed, long data frames should not be printed out, etc.)
+- [ ] **Ensure that everything described above is included in your neatly-organized and polished `exploration.qmd` file** -- this includes appropriate document YAML (at a minimum, title, author, date), clearly labeled sections, appropriately-formatted prose, appropriate code chunk options (e.g. code should render and execute, but warnings and messages should be suppressed, long data frames should not be printed out, etc.)
 - [ ] **Render `exploration.qmd` as a PDF.** Double check that all of your outputs, code, and prose are visible.
-- [ ] **Upload your PDF to Gradescope** by 11:59pm on 02/04/2026.
+- [ ] **Upload your PDF to Gradescope** by 11:59pm on Wed 02/04/2026.
 - [ ] **Submit a [Generative AI Statement of Use](https://forms.gle/uCw7U5jzJAKahjA4A){target="_blank}** for FPM #2 by 11:59pm on Wed 02/04/2026.
 
 
