--- a/course-materials/assignments/FPM3.qmd
+++ b/course-materials/assignments/FPM3.qmd
@@ -71,7 +71,7 @@ knitr::include_graphics("path/to/image")
 ::: {.callout-note collapse="true"}
 ## Open me for an example!
 
-Here's a great example of some hand-sketched visualizations, by [Marine Kochuten](){target="_blank"} (MEDS 2025). Marina chose to also hand-draft a potential layout of her final infographic:
+Here's a great example of some hand-sketched visualizations, by [Marine Kochuten](https://marinakochuten.github.io/){target="_blank"} (MEDS 2025). Marina also chose to sketch a potential layout of her final infographic:
 ```{r}
 #| eval: true
 #| echo: false
@@ -118,7 +118,7 @@ To receive a "Satisfactory" mark for FPM #3:
 - [ ] **Include all three code-based visualizations (Part IV).** These do not need to be in their perfect final form, but you should strive for complete visualizations as best you can. At a miminum, you should be able to check each of the five checkboxes listed under Part V. If you're unable to figure out how to implement pieces of these visualizations successfully using code, be sure to describe in writing where you're headed. All code used to build your visualizations must be visible in your rendered PDF (e.g. make sure code chunks remain expanded).
 - [ ] **Code in Part IV should follow appropriate styling conventions and include clear, informative annotations.** We will not enforce any particular code style guide (you may use conventions from prior courses if you prefer; we recommend following [these conventions](../../clean-code-guide.qmd){target="_blank"} from the [Tidyverse style guide](https://style.tidyverse.org/index.html){target="_blank"} if you're unsure where to start). You don’t need to explain every line, but your annotations should make it easy to follow your thinking and understand important decisions in your code.
 - [ ] **Answer all three Part VI questions.** There are no strict length requirements for free-response questions, however we expect that you answer them thoughtfully and fully.
-- [ ] **Ensure that everything described above is included in your neatly-organized and polished `drafting-viz.qmd`** -- this includes appropriate document YAML (at a minimum, title, author, date), clearly labeled sections, appropriately-formatted prose, appropriate code chunk options (e.g. code should render and execute, but warnings and messages should be suppressed, long data frames should not be printed out, etc.)
+- [ ] **Ensure that everything described above is included in your neatly-organized and polished `drafting-viz.qmd` file** -- this includes appropriate document YAML (at a minimum, title, author, date), clearly labeled sections, appropriately-formatted prose, appropriate code chunk options (e.g. code should render and execute, but warnings and messages should be suppressed, long data frames should not be printed out, etc.)
 - [ ] **Render `drafting-viz.qmd` as a PDF.** Double check that all of your outputs, code, and prose are visible.
-- [ ] **Upload your PDF to Gradescope** by 11:59pm on 02/22/2026.
+- [ ] **Upload your PDF to Gradescope** by 11:59pm on Sun 02/22/2026.
 - [ ] **Submit a [Generative AI Statement of Use](https://forms.gle/uCw7U5jzJAKahjA4A){target="_blank}** for FPM #3 by 11:59pm on Sun 02/22/2026.
