--- a/course-materials/assignments/FPM4.qmd
+++ b/course-materials/assignments/FPM4.qmd
@@ -61,7 +61,7 @@ Be sure to revisit the ten design elements listed in the [final project descript
 
 [**You may submit your write-up in one of two ways:**]{.teal-text}
 
-a. **As a blog post on your personal website** -- check out the [Adding a blog to your existing Quarto website](https://samanthacsik.github.io/posts/2022-10-24-quarto-blogs/) materials for a refresher, if needed
+a. **As a blog post on your personal website** -- check out the [Adding a blog to your existing Quarto website](https://samanthacsik.github.io/posts/2022-10-24-quarto-blogs/) materials for a refresher, if needed. **Note:** If you choose this option, you will need to copy code from your `eds240-infographic` repository into your blog post file within your personal website repository.
 
 b. **As a published Quarto document that is deployed using GitHub Pages.** Expand the note below for detailed instructions on how to do so:
 
@@ -100,9 +100,10 @@ To recieve a "Satisfactory" on FPM #4:
 - [ ] **Address your plan for implementing feedback** by responding to the four Part II prompts in an issue titled, `FPM4 - reviewing feedback`. There are no strict length requirements for the free-response questions, however we expect that you answer them thoughtfully and fully.
 - [ ] **Tag your instructors** ([@samanthacsik](https://github.com/samanthacsik){target="_blank"} & [@annieradams](https://github.com/annieradams){target="_blank"}) somewhere in your issue (at the start or end may make the most sense) -- this will send us an email notification linking to your issue.
 - [ ] **Build a cohesive, data-driven infographic** that takes into consideration the ten design elements described in the [final project description](final-project.qmd#partI){target="_blank"} and incorporates peer- and instructor-provided feedback, as appropriate. All graphical elements must be constructed using code to ensure that data are represented accurately. These graphical elements may be enhanced using alternative graphic design tools (e.g. Affinity). The final infographic (and any supporting elements), may also be created / modified using alternative graphic design tools.
+- [ ] **Add any additional information to your `eds240-infographic` README.** Your README should include all required sections, as defined in the [MEDS README Guidelines](https://ucsb-meds.github.io/README-guidelines/){target="_blank"}.
 - [ ] **Author an engaging science-communication piece** in the form of a blog post, which features your infographic and describes your motivations, data, goals, and design choices. Your writing should be free of typos and grammatical errors. Any code should be well-organized and annotated, and included in a single, collapsed code chunk at the end of your blog post. You should follow code chunk option recommendations as described in Part IV.
-- [ ] **Add your published blog post URL to [this Google Sheet](https://docs.google.com/spreadsheets/d/1eCGNK4Bl2QHXZ0ucs0wYegm1BiNo9RyI8r17DyrNgM4/edit?gid=0#gid=0){target="_blank"}** by 11:59pm on 03/08/2026.
-- [ ] **Submit a [Generative AI Statement of Use](https://forms.gle/uCw7U5jzJAKahjA4A){target="_blank}** for FPM #4 by 11:59pm on Wed 03/08/2026.
+- [ ] **Add your published blog post URL to [this Google Sheet](https://docs.google.com/spreadsheets/d/1eCGNK4Bl2QHXZ0ucs0wYegm1BiNo9RyI8r17DyrNgM4/edit?gid=0#gid=0){target="_blank"}** by 11:59pm on Sun 03/08/2026.
+- [ ] **Submit a [Generative AI Statement of Use](https://forms.gle/uCw7U5jzJAKahjA4A){target="_blank}** for FPM #4 by 11:59pm on Sun 03/08/2026.
 
 
 
