started updates to HW1; removing most content form website and shifting it to the template repo

--- a/course-materials/assignments/FPM1.qmd
+++ b/course-materials/assignments/FPM1.qmd
@@ -15,7 +15,7 @@ FPM #1 is the the first step in working towards your [final project](final-proje
 
 [**Begin by reading the [final project description](final-project.qmd){target="_blank"} in full**]{.teal-text} so that you have a clear understanding of the goals and requirements. 
 
-### II. Create a GitHub repository to house your final project work
+### II. Create a GitHub repository to house your final project work {#partII}
 
 [**Create a GitHub repository named `eds240-infographic`.**]{.teal-text} This is where you'll be doing any / all work related to your final project. Be sure to make your repository public, initialize your repository with a `README`, and add a `.gitignore` file. Update your README with any relevant information (see the [MEDS README Guidelines](https://ucsb-meds.github.io/README-guidelines/){target="_blank"}; you'll likely return to add more information as your project progresses).
 
@@ -55,7 +55,7 @@ This will be a focus of [FPM #2](FPM2.qmd){target="_blank"}, but if you're excit
 Take care to not push any large data files (>2GB) to GitHub. Instead, add your data file(s) or entire data folder to your `.gitignore`.
 :::
 
-## Rubric (specifications) {#specs}
+## Rubric (specifications) {#rubric}
 
 To receive a "Satisfactory" mark for FPM #1:
 
