--- a/course-materials/assignments/FPM3.qmd
+++ b/course-materials/assignments/FPM3.qmd
@@ -101,7 +101,7 @@ knitr::include_graphics("images/mkochuten-final.png")
   - [ ] experiment with colors and typefaces / fonts
   - [ ] create a presentable / aesthetically-pleasing theme (e.g. (re)move gridlines / legends as appropriate, adjust font sizes, etc.)
 
-### VI. Answer a few last questions about your work and progress
+### VI. Answer a few last questions about your work and progress {#partVI}
 
 - [ ] **1.** What challenges did you encounter or anticipate encountering as you continue to build / iterate on your visualizations in R? If you struggled with mocking up any of your three visualizations, describe those challenges here.
 
@@ -109,7 +109,7 @@ knitr::include_graphics("images/mkochuten-final.png")
 
 - [ ] **3.** What feedback do you need from the instructional team and / or your peers to ensure that your intended message is clear?
 
-## Rubric (specifications)
+## Rubric (specifications) {#rubric}
 
 To receive a "Satisfactory" mark for FPM #3:
 
