--- a/course-materials/assignments/FPM4.qmd
+++ b/course-materials/assignments/FPM4.qmd
@@ -93,7 +93,7 @@ knitr::include_graphics("images/deployed.png")
 
 ***Remember**, this is an opportunity to grow your portfolio and showcase both your technical and communication skills (through data viz and writing). The more thought, organization, and care you put into this write-up, the more confident you can be showing this to a potential employer!*
 
-## Rubric (specifications)
+## Rubric (specifications) {#rubric}
 
 To recieve a "Satisfactory" on FPM #4:
 
@@ -104,23 +104,3 @@ To recieve a "Satisfactory" on FPM #4:
 - [ ] **Author an engaging science-communication piece** in the form of a blog post, which features your infographic and describes your motivations, data, goals, and design choices. Your writing should be free of typos and grammatical errors. Any code should be well-organized and annotated, and included in a single, collapsed code chunk at the end of your blog post. You should follow code chunk option recommendations as described in Part IV.
 - [ ] **Add your published blog post URL to [this Google Sheet](https://docs.google.com/spreadsheets/d/1eCGNK4Bl2QHXZ0ucs0wYegm1BiNo9RyI8r17DyrNgM4/edit?gid=0#gid=0){target="_blank"}** by 11:59pm on Sun 03/08/2026.
 - [ ] **Submit a [Generative AI Statement of Use](https://forms.gle/uCw7U5jzJAKahjA4A){target="_blank}** for FPM #4 by 11:59pm on Sun 03/08/2026.
-
-
-
-
-
-
-
-
-
-
-
-<!-- ORIGINAL -->
-<!-- - [ ] Complete [option 1](HW4.qmd#option1-infographic), [option 2](HW4.qmd#option2-diff-audiences), or a pre-approved [option 3](HW4.qmd#option3-alternative). -->
-<!-- - [ ] All data visualizations should consider and implement (as appropriate) the ten design elements (listed above). It’s up to you to decide how to consider, include, omit, and / or modify any of these elements. -->
-<!-- - [ ] You work must incorporate (or otherwise address in writing) any prior feedback from the instructor / TA. -->
-<!-- - [ ] All code should be appropriately formatted and annotated, and code chunks should have the appropriate chunk options specified (e.g. suppress warnings and messages). -->
-<!-- - [ ] Describe your design process and decisions in a 1-2 page write-up, as described above. -->
-<!-- - [ ] Submit your work as either a published Quarto doc or as a blog post on your personal website. -->
-<!-- - [ ] Add the link to your published Quarto doc / blog post to this Google Sheet by Saturday, 03/08/2025 11:59pm. -->
-<!-- - [ ] Present your visualizations to the class on [date TBD] (finals week). -->
