--- a/course-materials/assignments/FPM5.qmd
+++ b/course-materials/assignments/FPM5.qmd
@@ -29,7 +29,7 @@ Flash talks will take place **in person during finals week**. You will have **3 
 Make up presentations will not be permitted. Please plan accordingly!
 :::
 
-## Rubric
+## Rubric (specifications) {#rubric}
 
 - [ ] **Present a 3-minute flash talk, in person** during our assigned finals week time slot. Your talk should briefly address each of the six points as described in Part I.
 - [ ] **Submit a [Generative AI Statement of Use](https://forms.gle/uCw7U5jzJAKahjA4A){target="_blank}** for FPM #5 by TBD.
