--- a/course-materials/assignments/HW2.qmd
+++ b/course-materials/assignments/HW2.qmd
@@ -120,7 +120,7 @@ There are a number of different chart types that could work for these data and q
 
 - [ ] **5.** Is there anything you wanted to implement, but didn't know how? If so, please describe.
 
-## Rubric (specifications)
+## Rubric (specifications) {#rubric}
 
 To recieve a "Satisfactory" on HW #2:
 
