--- a/course-materials/assignments/HW3.qmd
+++ b/course-materials/assignments/HW3.qmd
@@ -152,7 +152,7 @@ You can adjust the aspect ratio of your plot (i.e. its width to height ratio) so
 
 - [ ] **5.** Is there anything you wanted to implement, but didn't know how? If so, please describe.
 
-## Rubric (specifications)
+## Rubric (specifications) {#rubric}
 
 To recieve a "Satisfactory" on HW #3:
 
