--- a/course-materials/assignments/SR1.qmd
+++ b/course-materials/assignments/SR1.qmd
@@ -4,15 +4,15 @@ subtitle: "Assigned Wed 01/07/2026 | Due Fri 01/09/2026"
 description: "Adapted from [An Bui's](https://an-bui.com/) reflection exercises in ENVS 193DS"
 ---
 
-## Description 
+## Description {#description}
 
 [**In this self reflection, you'll come up with a plan for what you'd like to get out of the class and roughly outline how you'll accomplish your goals throughout the quarter.**]{.teal-text} You'll continue revisiting the goals you set for yourself in this assignment throughout the quarter, so its worthwhile to be reflective!
 
-### I. Create a repository using the `eds240-sr1` template
+### I. Create a repository using the `eds240-sr1` template {#partI}
 
 [**Follow [these instructions](https://docs.github.com/en/repositories/creating-and-managing-repositories/creating-a-repository-from-a-template#creating-a-repository-from-a-template){target="_blank"} to create a repository from the [`eds240-SR1` template](https://github.com/EDS-240-Data-Viz/eds240-sr1){target="_blank"}.**]{.teal-text} The template repository includes `SR1.qmd`, where you'll be responding to the self reflection prompts in the following section(s).
 
-### II. Outline your learning goals and plan
+### II. Outline your learning goals and plan {#partII}
 
 [**Please answer the following in `SR1.qmd`:**]{.teal-text}
 
@@ -20,7 +20,7 @@ description: "Adapted from [An Bui's](https://an-bui.com/) reflection exercises 
 - [ ] **2.** What do you hope to get out of this class?
 - [ ] **3.** How do you plan on accomplishing your learning goals for this course? **Note:** be specific here! Instead of writing, “I will complete homework assignments” or “I will study,”  you can make these more specific strategies: “I will create a schedule to map out assignments“ (elaborate on this), “I will use the homework assignments as opportunities to practice X,” I will communicate with classmates to ask for help after trying X,” “I will participate in online learning communities, such as TidyTuesday...” etc. 
 
-### III. (Optional) Help me get to know you a bit better!
+### III. (Optional) Help me get to know you a bit better! {#partIII}
 
 ::: {.callout-important}
 Answering the following questions is completely optional, and your choice to do so (or not) won’t impact your assignment score. However, I do truly appreciate any reflections you choose to share!
@@ -42,7 +42,7 @@ Answering the following questions is completely optional, and your choice to do 
 - [ ] **10.** What activity(ies) (outside of school / work) brings you the most joy? How do you plan to incorporate that activity into your schedule this quarter (if at all)? If you are unable to do so, is there something else you can plan to do that will bring you similar joy? 
 - [ ] **11.** What is a piece of media you enjoyed recently (e.g. music, book, movie, meme)? 
 
-## Rubric (specifications)
+## Rubric (specifications) {#rubric}
 
 To receive a "Satisfactory" on SR #1:
 
