--- a/course-materials/assignments/SR2.qmd
+++ b/course-materials/assignments/SR2.qmd
@@ -4,15 +4,15 @@ subtitle: "Assigned Wed 02/04/2026 | Due Fri 02/06/2026"
 description: "Adapted from [An Bui's](https://an-bui.com/) reflection exercises in ENVS 193DS"
 ---
 
-## Description 
+## Description {#description}
 
 [**For this self reflection, revisit your initial learning goals and plans (from SR #1), then consider your progress towards those goals in your responses to the following questions:**]{.teal-text} 
 
-## I. Create a repository using the `eds240-sr2` template
+## I. Create a repository using the `eds240-sr2` template {#partI}
 
 [**Follow [these instructions](https://docs.github.com/en/repositories/creating-and-managing-repositories/creating-a-repository-from-a-template#creating-a-repository-from-a-template){target="_blank"} to create a repository from the [`eds240-SR2` template](https://github.com/EDS-240-Data-Viz/eds240-sr2){target="_blank"}.**]{.teal-text} The template repository includes `SR2.qmd`, where you'll be responding to the self reflection prompts in the following section(s).
 
-### II. Reflect on your progress 
+### II. Reflect on your progress {#partII}
 
 [**Please answer the following in `SR2.qmd`:**]{.teal-text}
 
@@ -22,7 +22,7 @@ description: "Adapted from [An Bui's](https://an-bui.com/) reflection exercises 
 - [ ] **4.** Looking forward, how have your learning goals changed? Have they stayed the same? 
 - [ ] **5.** What topics have excited you the most (so far)? Have you spent time or efforts outside of class and / or the assignments diving deeper into any of these topics? If yes, what did you learn?
 
-### III. (Optional) Share any feedback you might have about the class
+### III. (Optional) Share any feedback you might have about the class {#partIII}
 
 ::: {.callout-important}
 Answering the following questions is completely optional, and your choice to do so (or not) won’t impact your assignment score. That said, I truly appreciate any feedback you’re willing to share, and I take it into consideration as we move into the second half of the course.
@@ -34,7 +34,7 @@ Answering the following questions is completely optional, and your choice to do 
 - [ ] **2.** Is there anything about this course that you are really enjoying? Anything that isn't working for you? 
 - [ ] **3.** What else would you like me to know about your experience in the course thus far? 
 
-## Rubric (specifications)
+## Rubric (specifications) {#rubric}
 
 To receive a "Satisfactory" on SR #2:
 
