--- a/course-materials/keys/KEY-lecture2.2-distributions.qmd
+++ b/course-materials/keys/KEY-lecture2.2-distributions.qmd
@@ -12,7 +12,7 @@ This template follows [lecture 2.2 slides](../lecture-slides/lecture2.2-distribu
 
 ## Setup
 
-[UPDATE reading data in from EDI not working] 
+[UPDATE reading data in from EDI not working; fix later] 
 
 - Find data & metadata on the [EDI Data Portal](https://portal.edirepository.org/nis/mapbrowse?scope=knb-lter-sbc&identifier=2007). 
 - Get data download link by right-clicking on the **Download** button > **Copy Link Address** > then paste into `read_csv()`
