--- a/course-materials/assignments/SR3.qmd
+++ b/course-materials/assignments/SR3.qmd
@@ -4,22 +4,22 @@ subtitle: "Assigned Wed 03/11/2026 | Due Fri 03/13/2026"
 description: "Adapted from [An Bui's](https://an-bui.com/) reflection exercises in ENVS 193DS"
 ---
 
-## Description 
+## Description {#description}
 
 [**For this final self reflection, revisit your self reflections from the start and middle of the quarter, then answer the following questions:**]{.teal-text} 
 
-### I. Create a repository using the `eds240-sr3` template
+### I. Create a repository using the `eds240-sr3` template {#partI}
 
 [**Follow [these instructions](https://docs.github.com/en/repositories/creating-and-managing-repositories/creating-a-repository-from-a-template#creating-a-repository-from-a-template){target="_blank"} to create a repository from the [`eds240-SR2` template](https://github.com/EDS-240-Data-Viz/eds240-sr3){target="_blank"}.**]{.teal-text} The template repository includes `SR3.qmd`, where you'll be responding to the self reflection prompts in the following section(s).
 
-### II. Reflect on your progress
+### II. Reflect on your progress {#partII}
 
 - [ ] **1.** Since your mid-quarter self reflection (SR #2), have you improved any of your existing skills? Have you learned new ones?
 - [ ] **2.** Have you accomplished your learning goals for this quarter (that you set in SR #1, and potentially expanded upon or modified in SR #2)? If you did, how did you do it?
 - [ ] **3.** What are you proudest of accomplishing in this course? 
 - [ ] **4.** What are some transferable skills that you developed in this course? How might you apply them to other courses or deliverables within your graduate program (e.g. MEDS, MESM, etc.) or to jobs in the future?
 
-### III. (Optional) Share any feedback you might have about the class
+### III. (Optional) Share any feedback you might have about the class {#partIII}
 
 ::: {.callout-important}
 Answering the following questions is completely optional, and your choice to do so (or not) won’t impact your assignment score. That said, I greatly appreciate any feedback you’re willing to share -- I take all of it into consideration when planning next year’s class.
@@ -30,7 +30,7 @@ Answering the following questions is completely optional, and your choice to do 
 - [ ] **1.** What is one thing that you really liked about this course, and why? What is one thing you think could be improved about this course, and how?
 - [ ] **2.** Is there anything else you'd like the instructors to know about your experience in the course?
 
-## Rubric (specifications)
+## Rubric (specifications) {#rubric}
 
 To receive a "Satisfactory" on SR #3:
 
