--- a/assignments.qmd
+++ b/assignments.qmd
@@ -21,7 +21,7 @@ You will be building towards your final project deliverables -- a data-driven in
 | Assignment Type         | Assignment Title                      | Date Assigned   | Date Due           |
 |:------------------------|---------------------------------------|----------------|---------------------|
 | SR                      | [Pre-course reflection (SR #1)](course-materials/assignments/SR1.qmd) | Wed 01/07/2026 | Fri 01/09/2026 |
-| HW                      | Homework #1  | Wed 01/07/2026 | Wed 01/14/2026 |
+| HW                      | [Homework #1](course-materials/assignments/HW1.qmd) | Wed 01/07/2026 | Wed 01/14/2026 |
 | FPM                     | [Final Project Milestone #1](course-materials/assignments/FPM1.qmd) | Wed 01/14/2026 | Wed 01/21/2026 | 
 | HW                      | [Homework #2](course-materials/assignments/HW2.qmd) | Wed 01/21/2026 | Wed 01/28/2026 | 
 | FPM                     | [Final Project Milestone #2](course-materials/assignments/FPM2.qmd) | Wed 01/28/2026 | Wed 02/04/2026 | 
