--- a/course-materials/assignments/HW1.qmd
+++ b/course-materials/assignments/HW1.qmd
@@ -16,19 +16,19 @@ TODO: revise assignment -- make focus the responses to questions to verify under
 
 ## Description {#description}
 
-Much of your time as a data scientist will be spent looking at code written by others -- you may imagine scenarios such as trying to learn from and adapt someone else's code for your own work, conducting a code review for a colleague, or validating the code output of a generative AI tool. Being able to look at and make sense of code that you did not write yourself is an invaluable skill and an important one to practice throughout your learning journey. [**Here, you'll be asked to interpret `{ggplot2}` code written by someone else. This will likely require running code (both as a whole *and* line-by-line), as well as reading documentation, Googling and / or leveraging genAI tools to aid in your understanding.**]{.teal-text}
-
-*I recognize that there is (likely) **a lot** of new code presented here that we haven't yet covered in this course (we'll get there eventually though!). This is intentionally an exercise is resourcefulness! By the end of this exercise, you should feel a bit more confident in your ability to interpret (and maybe even reuse) code written by others.*
+Much of your time as a data scientist will be spent looking at code written by others -- you may imagine scenarios such as trying to learn from and adapt someone else's code for your own work, conducting a code review for a colleague, or validating the code output of a generative AI tool. Being able to look at and make sense of code that you did not write yourself is an invaluable skill and an important one to practice throughout your learning journey. [**Here, you'll be asked to interpret data wranglign and `{ggplot2}` code written by someone else. This will likely require running code (both as a whole *and* line-by-line), as well as reading documentation, Googling and / or leveraging genAI tools to aid in your understanding.**]{.teal-text}
+<!-- 
+*I recognize that there is (likely) **a lot** of new code presented here that we haven't yet covered in this course (we'll get there eventually though!). This is intentionally an exercise is resourcefulness! By the end of this exercise, you should feel a bit more confident in your ability to interpret (and maybe even reuse) code written by others.* -->
 
 ### I. Create a repository using the `eds240-hw1-ufo` template {#partI}
 
 [**Follow [these instructions](https://docs.github.com/en/repositories/creating-and-managing-repositories/creating-a-repository-from-a-template#creating-a-repository-from-a-template){target="_blank"} to create a repository from the [`eds240-hw1-ufo` template](https://github.com/EDS-240-Data-Viz/eds240-hw1-ufo){target="_blank"}.**]{.teal-text} The template repository includes `HW1.qmd`, which is where you'll be completing your work.
 
-### II. Interpret `{ggplot2}` code & answer questions {#partII}
+### II. Interpret code & answer questions {#partII}
 
-[**Interpret, explain, and reflect on code adapted from [Dan Oehm](https://gradientdescending.com/#google_vignette){target="_blank"}'s *UFO Sightings* visualization, based on the code and question prompts in `HW1.qmd`**]{.teal-text}. You can find metadata and additional information on the [rfordatascience/tidytuesday (2023-06-20) `readme.md`](https://github.com/rfordatascience/tidytuesday/blob/master/data/2023/2023-06-20/readme.md#data-dictionary){target="_blank"}. 
+[**Interpret, explain, and reflect on code adapted from [Dan Oehm](https://gradientdescending.com/#google_vignette){target="_blank"}'s *UFO Sightings* visualization, following the question prompts in `HW1.qmd`**]{.teal-text}. You can find metadata and additional information on the [rfordatascience/tidytuesday (2023-06-20) `readme.md`](https://github.com/rfordatascience/tidytuesday/blob/master/data/2023/2023-06-20/readme.md#data-dictionary){target="_blank"}. 
 
-**Note:** While it's not required or graded, you are strongly encouraged to annotate this code (with the help of documentation, Google, genAI tools, etc.). There's a lot of creative and helpful code packed into this visualization, and you may find it helpful to revisit it throughout the quarter to reference particular sections or techniques. 
+**Note:** While it's not required or graded, you are strongly encouraged to annotate this code (with the help of documentation, Google, genAI tools, etc.). There's a lot of creative and helpful code packed into this visualization (and the data wrangling leading up to the viz!), and you may find it helpful to revisit it throughout the quarter to reference particular sections or techniques. 
 
 ::: {.callout-note}
 ## You'll be interpreting *refactored* code
@@ -74,9 +74,7 @@ Modified viz, by Sam Shanny-Csik ([refactored code](https://github.com/EDS-240-D
 To recieve a "Satisfactory" on HW #1:
 
 - [ ] **Include your preferred name** in the `author` field of the `HW1.qmd` YAML. 
-- [ ] Update each comment line in the code that reads, `# ANNOTATE`, with a *brief* description, written in your own words. Some lines that have already been annotated for you -- you do not need to re-write these annotations. You are **allowed up to five incorrect or missing annotations**.
-- [ ] Leave the code chunk options set to `eval: false` and `echo: true`, which ensures that your code renders, but the output(s) is suppressed. If you decide to break your code into smaller code chunks, ensure that each has the same options set. 
-- [ ] Answer all Part B questions. Questions 1 and 2 have correct answers. Responses to questions 3-5 should be unique to you but answered in full. There is no set length requirement, and bullet points are acceptable.
+- [ ] **Answer all 24 questions** about the code and outputs correctly (though a few questions are opinion-based and do not have a single correct answer). There are no strict length requirements, however we expect that you answer them thoughtfully, fully, and in your own words.
 - [ ] **Update your repo's README** so that it includes the core elements, as described in the [MEDS README Guidelines](https://ucsb-meds.github.io/README-guidelines/#always-include){target="_blank"}
 - [ ] **Render `HW1.qmd` as a PDF.** Double check that all of your outputs, code, and prose are visible.
 - [ ] **Upload your PDF to Gradescope** by 11:59pm on Wed 01/14/2026.
